added offer and my learn popup using position absolute

--- a/index.html
+++ b/index.html
@@ -33,7 +33,13 @@
       </div>
       <div class="navbar__s3">
         <p>Courses</p>
-        <p>My Learning</p>
+        <!-- <p>My Learning</p> -->
+         <div class="learn">
+          <p>My learning</p>
+          <div class="learn_popup">
+            You have not bought any courses
+          </div>
+         </div>
         <i class="fa-solid fa-cart-shopping"></i>
         <i class="fa-solid fa-bell"></i>
         <i class="fa-solid fa-user"></i>
@@ -47,7 +53,12 @@
       <h3>Design</h3>
       <h3>Marketing</h3>
     </div>
-    <div class="main_image"><img src="./Images/udemy.jpg"</div>
+    <div class="main_image"><img src="./Images/udemy.jpg" />
+    <div class="offer">
+      <h2>Udemy Flash Sale!, Offer for 24 Hours</h2>
+      <p> Get the top courses for 499. Grab your courses, Save now and enjoy lifetime</p>
+
+    </div>
     <div class="recommended">
       <h1>Recommended for you</h1>
       <p>Pick the best fit</p>
